<resources>
    <string name="app_name">NdkCalculator</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">_</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">X</string>
    <string name="c">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="div">÷</string>
    <string name="dot">.</string>
    <string name="dark_mode">DARK MODE</string>
</resources>