<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/change_theme"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.angads25.toggle.widget.DayNightSwitch
            android:id="@+id/switch1"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:textSize="14sp"
            app:colorBorder="@color/colorAccent"
            app:on="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="end"
        android:maxLength="18"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/change_theme" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_lightSource="leftTop"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textColor="?colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/plus_minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/plus_minus"
                    android:textColor="?colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/percent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/percent"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/div"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_7"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_8"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_9"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/mult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/mult"
                    android:textColor="?colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_6"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingBottom="25dp"
                    android:text="@string/minus"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/n0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/dot"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="30dp"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_backspace" />

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:neumorph_shadowColorDark="?solidDark"
                app:neumorph_shadowColorLight="?solidLight">

                <TextView
                    android:id="@+id/equal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>